# finwar

./: .env.dev  .gitignore  CHANGELOG.md  README.md  cliff.toml  docker-compose.yml
.github/workflows/: container_build_push.yaml  market_api_release.yaml  python_api_linting.yml  python_server_linting.yml  release.yaml  ruff.yml
bots/: bot_random.py
bots/rando/: .dockerignore  .gitignore  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
bots/rando/docker/: Dockerfile
bots/rando/src/finwar_rando/: __main__.py  config.py  rando.py
data-ingestion/: .dockerignore  CHANGELOG.md  README.md  cliff.toml  docker-compose.yml  pyproject.toml
data-ingestion/docker/: Dockerfile
data-ingestion/src/finwar_data_ingestion/: definitions.py
data-ingestion/src/finwar_data_ingestion/components/: stocks_intraday_history.py
data-ingestion/src/finwar_data_ingestion/defs/: assets.py
data-ingestion/src/finwar_data_ingestion/defs/stocks_intraday_history/: defs.yaml
data-ingestion/src/finwar_data_ingestion/resources/: __init__.py  massive.py  polygon.py  postgresql.py
data/ingestion/: .gitignore  Dockerfile  README.md  pyproject.toml
data/ingestion/docker_compose/: Dockerfile_dagster  dagster.yaml  docker-compose.yml  workspace.yaml
data/ingestion/finwar_ingestion/: __init__.py  definitions.py
data/ingestion/finwar_ingestion/assets/: __init__.py  ingestion.py
data/ingestion/finwar_ingestion/resources/: __init__.py  postgresql.py
init/: stocks_history.init.sql
servers/: app.py
servers/apis/: stocks.py
servers/flask-server/: cliff.toml
servers/flask-server/apis/: users.py
servers/python-server/: .gitignore  CHANGELOG.md
servers/python-server/apis/: __init__.py  trades.py
servers/python-server/services/: market.py
servers/requirements/: base.txt
servers/rust-server/: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  docker-compose.yml
servers/rust-server/docker/: Dockerfile
servers/rust-server/entity/: Cargo.toml  bot.rs  mod.rs  orderbook.rs  prelude.rs  stocks_history.rs  wallet.rs
servers/rust-server/migration/src/: lib.rs  m20250918_163000_create_bots_table.rs  m20250918_170126_create_wallet_table.rs  m20251003_145407_create_stocks_history_table.rs  m20251008_194445_create_orderbook_table.rs
servers/rust-server/src/: bot.rs  cli.rs  clock.rs  config.rs  data.rs  enroll.rs  error.rs  home.rs  leaderboard.rs  main.rs  render.rs  state.rs  trade.rs
servers/rust-server/static/css/: style.css
servers/rust-server/templates/: base.html  bot.html  error.html  home.html  leaderboard.html  orderbook-row.html  ranking-bot-row.html
