[project]
name = "finwar_data_ingestion"
version = "0.1.0"
description = "Data pipeline to ingest stock market datasets into a Time Series Database"
authors = [
    { name = "Coding Kelps" }
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "dagster==1.11.10",
    "dagster-docker>=0.27.10",
    "pandas>=2.3.2",
    "polygon>=1.2.8",
    "psycopg[binary]>=3.2.10",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "finwar_data_ingestion"
registry_modules = [
    "finwar_data_ingestion.components.*",
]
