[project]
name = "finwar_rando"
version = "0.1.0"
description = "Example trading bot acting randomly in the market."
readme = "README.md"
authors = [
  { name = "Coding Kelps" }
]
requires-python = "==3.13.*"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
finwar_rando = "finwar_rando.__main__:run"

[dependency-groups]
dev = [
  "ruff>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
